trunk/Archive2/c9/c2f41c4c49d875/output
main.cpp:7:19: error: invalid suffix 'LUL' on integer constant
    std::cout << 3LUL << std::endl;
                  ^
1 error generated.
