trunk/Archive2/c9/c2f41c4c49d875/main.cpp
#include <iostream>

int main()
{
    std::cout << 1ULL << std::endl;
    std::cout << 2LLU << std::endl;
    std::cout << 3LUL << std::endl;

}
